tests/rename/should_compile/T14747A.hs
{-# LANGUAGE PatternSynonyms #-}

module T14747A where

pattern S{x} = [x]
