tests/rename/should_fail/RnImplicitBindInMdoNotation.hs
{-# LANGUAGE RecursiveDo    #-}
{-# LANGUAGE ImplicitParams #-}

module ShouldFail where

x = mdo
  let ?x = 5
  ()
